# artifactsmmo-sdk

./: .gitignore  Cargo.toml
api/: Cargo.toml
api/src/: account.rs  active_events.rs  bank.rs  characters.rs  events.rs  grand_exchange.rs  items.rs  lib.rs  maps.rs  monsters.rs  my_characters.rs  npcs.rs  npcs_items.rs  resources.rs  server.rs  tasks.rs  tasks_reward.rs
derive/: Cargo.toml
derive/src/: lib.rs
src/: account.rs  bank.rs  char.rs  client.rs  consts.rs  container.rs  events.rs  gear.rs  item_code.rs  items.rs  lib.rs  maps.rs  monsters.rs  npcs.rs  npcs_items.rs  resources.rs  server.rs  simulator.rs  tasks.rs  tasks_rewards.rs
src/char/: action.rs  character.rs  error.rs  inventory.rs  request_handler.rs  skill.rs
src/client/: account.rs  bank.rs  events.rs  grand_exchange.rs  items.rs  maps.rs  mod.rs  monsters.rs  npcs.rs  npcs_items.rs  resources.rs  server.rs  tasks.rs  tasks_rewards.rs
src/client/character/: action.rs  error.rs  inventory.rs  mod.rs  request_handler.rs
src/entities/: active_event.rs  events.rs  item.rs  map.rs  mod.rs  monster.rs  npc.rs  npc_item.rs  resource.rs  task.rs  task_reward.rs
src/simulator/: entity.rs  has_effects.rs  hit.rs  mod.rs
