[workspace]
resolver = "2"
members = ["api"]

[package]
name = "artifactsmmo-sdk"
edition = "2024"

[dependencies]
artifactsmmo-api-wrapper = { path = "api/" }
artifactsmmo-openapi = { path = "../artifactsmmo-openapi/", version = "5.0" }
chrono = "0.4"
derive_more = { version = "2.0", features = ["try_from"] }
downcast-rs = "2.0"
fs_extra = "1.3"
itertools = "0.14"
log = "0.4"
nutype = "0.6"
ordered-float = "5.0"
reqwest = { version = "^0.12", features = ["json", "blocking", "multipart"] }
sdk_derive = { version = "0.1", path = "derive" }
serde = { version = "^1.0", features = ["rc"] }
serde_json = "^1.0"
strum = "0.27"
strum_macros = "0.27"
thiserror = "2.0"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld"]
